Bug 629857 - When invalidating transformed items, round the original area out to the nearest pixel. r=roc a=roc